# spcli

./: Cargo.toml  README.md
src/: infocmd.rs  main.rs  playbackcmd.rs
